# Fragmentum

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/fragmentum-fuse/: Cargo.toml
crates/fragmentum-fuse/src/: lib.rs
crates/fragmentum-fuse/tests/: challenge2_gateway.rs
crates/fragmentum-math/: Cargo.toml
crates/fragmentum-math/src/: gf.rs  lib.rs  matrix.rs  reed_solomon.rs
crates/fragmentum-math/tests/: challenge1_math.rs
crates/fragmentum-meta/: Cargo.toml
crates/fragmentum-meta/src/: lib.rs
crates/fragmentum-meta/tests/: challenge4_meta.rs
crates/fragmentum-storage/: Cargo.toml
crates/fragmentum-storage/src/: lib.rs
crates/fragmentum-storage/tests/: challenge3_storage.rs
